<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/icon_user"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_marks"
            android:icon="@drawable/about"
            android:title="@string/menu_marks" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/questions"
            android:title="@string/menu_quiz" />
    </group>
</menu>